--- a/Investo/Investo/Investo.csproj
+++ b/Investo/Investo/Investo.csproj
@@ -38,6 +38,9 @@
     <Reference Include="DynamicDataDisplay">
       <HintPath>..\DynamicDataDisplay\DynamicDataDisplay.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=14.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="OxyPlot">
       <HintPath>..\packages\OxyPlot.Core.2014.1.303.1\lib\portable-net4+sl4+wp71+win8\OxyPlot.dll</HintPath>
     </Reference>
@@ -77,6 +80,10 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClasses1.dbml</DependentUpon>
+    </Compile>
+    <Compile Include="dbFinancial_DataDataSet.cs">
+      <DependentUpon>dbFinancial_DataDataSet.xsd</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="dbFinancial_DataDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
